# chestxray-pneumonia-detection

./: .gitignore  README.md  download_data.sh  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  test_form.html  train.py
chestx_pneumodetect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: Dockerfile
